# rcDaulServo

./: .gitattributes  .gitignore  Android-App-Requirements.md  README.md  gh-run.ps1  快速编译官方示例到esp32c3的merged.bin的SKILL.md  查看编译状态.bat
.github/workflows/: build-esp32c3.yml
components/radar/: CMakeLists.txt  Kconfig
components/radar/include/: radar.h
components/radar/src/ld2450/: radar_ld2450.c  radar_ld2450.h
components/radar/src/ld2452/: radar_ld2452.c  radar_ld2452.h
components/radar/src/ld2460/: radar_ld2460.c  radar_ld2460.h
components/radar/src/ld2461/: radar_ld2461.c  radar_ld2461.h
components/radar/src/ld6002b/: radar_ld6002b.c  radar_ld6002b.h
components/radar/src/ld6004/: radar_ld6004.c  radar_ld6004.h
components/radar/src/r60abd1/: radar_r60abd1.c  radar_r60abd1.h
docs/specs/: 2026-06-03-owl-work-modes-design.md  2026-06-04-watchdog-plan.md
gatt_client/main/: CMakeLists.txt  gattc_demo.c  idf_component.yml
gatt_server/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3
gatt_server/main/: CMakeLists.txt  gatts_demo.c
ld6004/: CMakeLists.txt  Kconfig  idf_component.yml
protocol/: owl_protocol.h
